webcam resolution to 720p

--- a/Laboratorios/Laboratorio_9/opencv_continuous_haar_cascades_and_canny_webcam.ipynb
+++ b/Laboratorios/Laboratorio_9/opencv_continuous_haar_cascades_and_canny_webcam.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -69,14 +69,19 @@
    "source": [
     "# Configuración de video de 640*480 @ 60Hz\n",
     "from pynq.drivers import HDMI \n",
-    "from pynq.drivers.video import VMODE_640x480\n",
-    "hdmi_out = HDMI('out', video_mode=VMODE_640x480)\n",
+    "#from pynq.drivers.video import VMODE_640x480\n",
+    "#hdmi_out = HDMI('out', video_mode=VMODE_640x480)\n",
+    "from pynq.drivers.video import VMODE_1280x720\n",
+    "hdmi_out = HDMI('out', video_mode=VMODE_1280x720)\n",
     "hdmi_out.start()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Paso 3: Declaramos algunas constantes\n",
     "\n",
@@ -85,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -97,13 +102,16 @@
     "frame_out_w = 1920\n",
     "frame_out_h = 1080\n",
     "# Configuración de la cámara de salida\n",
-    "frame_in_w = 640\n",
-    "frame_in_h = 480"
+    "frame_in_w = 1280\n",
+    "frame_in_h = 720"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Paso 4:  Llamado de librerías\n",
     "\n",
@@ -115,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -132,7 +140,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Paso 5:  Inicialización de cámara\n",
     "\n",
@@ -143,9 +154,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -183,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -231,7 +244,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Paso 7: Uso de Canny\n",
     "\n",
@@ -242,9 +258,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -279,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -296,7 +314,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
